fix bug #48983 (DomDocument : saveHTMLFile wrong charset)