ext/dom/document.c
@@ -2252,6 +2252,7 @@ PHP_FUNCTION(dom_document_save_html_file)
 	dom_object *intern;
 	dom_doc_propsptr doc_props;
 	char *file;
+	const char *encoding;
 
 	if (zend_parse_method_parameters(ZEND_NUM_ARGS() TSRMLS_CC, getThis(), "Os", &id, dom_document_class_entry, &file, &file_len) == FAILURE) {
 		return;
@@ -2264,11 +2265,12 @@ PHP_FUNCTION(dom_document_save_html_file)
 
 	DOM_GET_OBJ(docp, id, xmlDocPtr, intern);
 
-	/* encoding handled by property on doc */
+
+	encoding = (const char *) htmlGetMetaEncoding(docp);
 
 	doc_props = dom_get_doc_props(intern->document);
 	format = doc_props->formatoutput;
-	bytes = htmlSaveFileFormat(file, docp, NULL, format);
+	bytes = htmlSaveFileFormat(file, docp, encoding, format);
 
 	if (bytes == -1) {
 		RETURN_FALSE;
